# cpp-playground

./: .gitignore  MODULE.bazel  README.md  bazel-cpp-playground
1/: BUILD.bazel  average.cpp  star.cpp
2/: BUILD.bazel  common.hpp  fraction.cpp  fraction.hpp  list.cpp  list.hpp  pointers1.cpp  raii.cpp  sharedptr.cpp  uniqueptr.cpp
3/: BUILD.bazel  student.cpp  student.hpp
6/: equality.cpp  max1.cpp  pair.cpp
7/: iterator_palindrome.cpp  main1.cpp  split.cpp
adventofcode2025/day1/: BUILD.bazel  code.cpp  code.hpp  code.test.cpp
adventofcode2025/day2/: BUILD.bazel  code.cpp  code.hpp  code.test.cpp
adventofcode2025/day3/: BUILD.bazel  code.cpp  code.hpp  code.test.cpp
adventofcode2025/day4/: BUILD.bazel  code.cpp  code.hpp  code.test.cpp
adventofcode2025/day5/: code.cpp  code.hpp
adventofcode2025/day6/: code.cpp  code.hpp
