cc_binary(
    name = "ptrs1",
    srcs = ["common.hpp", "pointers1.cpp"],
)

cc_binary(
    name="sharedptr",
    srcs=["common.hpp", "sharedptr.cpp"]
)

cc_binary(
    name="uniqueptr",
    srcs=["common.hpp", "uniqueptr.cpp"]
)

cc_binary(
    name="raii",
    srcs=["raii.cpp"]
)

cc_binary(
    name="fraction",
    srcs=["fraction.hpp", "fraction.cpp"]
)

cc_binary(
    name="list",
    srcs=["list.hpp", "list.cpp"],
)
