
load("@rules_cc//cc:defs.bzl", "cc_test")

cc_binary(
    name="day1",
    srcs=["code.hpp", "code.cpp"]
)

cc_test(
    name = "day1test",
    srcs = ["code.hpp", "code.cpp", "code.test.cpp"],
    deps = ["@catch2//:catch2", "@catch2//:catch2_main"]
    # Add visibility if needed, e.g., visibility = ["//test:__subpackages__"]
)